Display associated collections on show pages

--- a/app/views/sun_a_templates/show.html.erb
+++ b/app/views/sun_a_templates/show.html.erb
@@ -51,5 +51,9 @@
 </div>
 
 <!-- Show Page Customization starts -->
-
+<div class="row mb-3">
+  <div class="col-md-8 offset-md-2">
+    <%= render partial: "sun_a_templates/sun_a_poses" %>
+  </div>
+</div>
 <!-- Show Page Customization end -->
