--- a/app/views/yoga_flow_templates/show.html.erb
+++ b/app/views/yoga_flow_templates/show.html.erb
@@ -105,5 +105,9 @@
 </div>
 
 <!-- Show Page Customization starts -->
-
+<div class="row mb-3">
+  <div class="col-md-8 offset-md-2">
+    <%= render partial: "yoga_flow_templates/yoga_flow_poses" %>
+  </div>
+</div>
 <!-- Show Page Customization end -->
