Replace raw foreign key value in poses with primary descriptors

--- a/app/views/pose_templates/index.html.erb
+++ b/app/views/pose_templates/index.html.erb
@@ -108,7 +108,7 @@
 
         <!-- Display pose.sun_b_id start -->
         <td>
-          <%= pose.sun_b_id %>
+          <%= pose.sun_b.created_at %>
         </td>
         <!-- Display pose.sun_b_id end -->
 
