Add forms for new collection objects on show pages

--- a/app/views/sun_a_templates/_sun_a_poses.html.erb
+++ b/app/views/sun_a_templates/_sun_a_poses.html.erb
@@ -28,7 +28,7 @@
     <div class="card-footer">
       <div class="collapse" id="sun_a_poses_new_form">
         <!-- New associationcollection form start -->
-
+        <%= render partial: "sun_a_templates/sun_a_poses_new_form" %>
         <!-- New associationcollection form end -->
       </div>
     </div>
