--- a/app/views/yoga_flow_templates/_yoga_flow_poses.html.erb
+++ b/app/views/yoga_flow_templates/_yoga_flow_poses.html.erb
@@ -28,7 +28,7 @@
     <div class="card-footer">
       <div class="collapse" id="yoga_flow_poses_new_form">
         <!-- New associationcollection form start -->
-
+        <%= render partial: "yoga_flow_templates/yoga_flow_poses_new_form" %>
         <!-- New associationcollection form end -->
       </div>
     </div>
