--- a/app/views/sun_c_templates/_sun_c_poses.html.erb
+++ b/app/views/sun_c_templates/_sun_c_poses.html.erb
@@ -28,7 +28,7 @@
     <div class="card-footer">
       <div class="collapse" id="sun_c_poses_new_form">
         <!-- New associationcollection form start -->
-
+        <%= render partial: "sun_c_templates/sun_c_poses_new_form" %>
         <!-- New associationcollection form end -->
       </div>
     </div>
