Replace raw foreign key value in poses with primary descriptors

--- a/app/views/pose_templates/index.html.erb
+++ b/app/views/pose_templates/index.html.erb
@@ -90,7 +90,7 @@
 
         <!-- Display pose.sequence_id start -->
         <td>
-          <%= pose.sequence_id %>
+          <%= pose.flow.name %>
         </td>
         <!-- Display pose.sequence_id end -->
 
