Replace raw foreign key value in poses with primary descriptors

--- a/app/views/pose_templates/index.html.erb
+++ b/app/views/pose_templates/index.html.erb
@@ -102,7 +102,7 @@
 
         <!-- Display pose.sun_a_id start -->
         <td>
-          <%= pose.sun_a_id %>
+          <%= pose.sun_a.created_at %>
         </td>
         <!-- Display pose.sun_a_id end -->
 
