--- a/app/views/yoga_flow_templates/index.html.erb
+++ b/app/views/yoga_flow_templates/index.html.erb
@@ -92,7 +92,7 @@
 
         <!-- Display yoga_flow.user_id start -->
         <td>
-          <%= yoga_flow.user_id %>
+          <%= yoga_flow.user.email %>
         </td>
         <!-- Display yoga_flow.user_id end -->
 
