Replace raw foreign key value in poses with primary descriptors

--- a/app/views/pose_templates/index.html.erb
+++ b/app/views/pose_templates/index.html.erb
@@ -114,7 +114,7 @@
 
         <!-- Display pose.sun_c_id start -->
         <td>
-          <%= pose.sun_c_id %>
+          <%= pose.sun_c.created_at %>
         </td>
         <!-- Display pose.sun_c_id end -->
 
