--- a/app/views/yoga_flow_templates/index.html.erb
+++ b/app/views/yoga_flow_templates/index.html.erb
@@ -128,5 +128,12 @@
       </tr>
       <% end %>
     </table>
+
+    <div class="row mb-3">
+      <div class="col-md-12">
+        <%= paginate @yoga_flows, theme: "twitter-bootstrap-4" %>
+      </div>
+    </div>
+
   </div>
 </div>
